@@ -4,7 +4,8 @@ History
 v0.6.0 (2014-03-10)
 -------------------
 
-* Separated ``ironpycompiler`` and created a package
+* Separated ``ironpycompiler`` and created a package.
+* Added ``analyze`` command. (ipy2asm.py)
 
 v0.5.0 (2014-03-08)
 -------------------
